--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "mongoose": "^6.4.4",
-    "morgan": "^1.10.0",
-    "socket.io": "^4.5.1"
+    "morgan": "^1.10.0"
   }
 }
